💄 Fixed example iframe spacing

--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -18,6 +18,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     padding: 30px !important;
 }
 
+.no-padding-top { padding-top: 0 !important; }
+
 .margin-top-10 { margin-top: 10px !important; }
 .margin-top-20 { margin-top: 20px !important; }
 .margin-top-30 { margin-top: 30px !important; }
